--- a/HISTORY
+++ b/HISTORY
@@ -5,3 +5,11 @@ VDR Plugin 'tvonscreen' Revision History
 
 - Initial revision.
 
+2004-03-21: Version 0.5.0
+
+- First public release
+
+2004-03-23: Version 0.5.1
+
+- added patch for vdr 1.3.x (not tested, don't have 1.3.x)
+
