--- a/HISTORY
+++ b/HISTORY
@@ -29,3 +29,8 @@ VDR Plugin 'tvonscreen' Revision History
 - added setup page
 - added own XPM routines because the buildin of vdr were to special,
   this allows logo support in 1.2.6 and 1.3.x
+
+2006-06-20: Version 1.0.141
+
+- official VDR 1.4.1 version
+- introduced new version numbering schema: last number is minimum VDR API version
