--- a/po/it_IT.po
+++ b/po/it_IT.po
@@ -10,165 +10,195 @@ msgstr ""
 "Project-Id-Version: VDR 1.6.0\n"
 "Report-Msgid-Bugs-To: <see README>\n"
 "POT-Creation-Date: 2010-08-02 15:03+0200\n"
-"PO-Revision-Date: 2008-12-22 18:10+0000\n"
-"Last-Translator: Sean Carlos <seanc@libero.it>\n"
-"Language-Team: <vdr@linuxtv.org>\n"
+"PO-Revision-Date: 2010-08-09 19:08+0100\n"
+"Last-Translator: Diego Pierotto <vdr-italian@tiscali.it>\n"
+"Language-Team:  <vdr@linuxtv.org>\n"
 "MIME-Version: 1.0\n"
-"Content-Type: text/plain; charset=ISO-8859-15\n"
+"Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"X-Poedit-Language: Italian\n"
+"X-Poedit-Country: ITALY\n"
+"X-Poedit-SourceCharset: utf-8\n"
 
 msgid "show channel logos"
-msgstr ""
+msgstr "Mostra loghi canali"
 
 msgid "show channel names"
-msgstr ""
+msgstr "Mostra nomi canali"
 
 msgid "show logos in black&white"
-msgstr ""
+msgstr "Mostra loghi in bianco e nero"
 
 msgid "enable color problem work around"
-msgstr ""
+msgstr "Abilita correz. problema colore"
 
 msgid "use XL fonts"
-msgstr ""
+msgstr "Utilizza caratteri grandi"
 
 msgid "hide info line"
-msgstr ""
+msgstr "Nascondi riga informazioni"
 
 msgid "user point in time 1 (Key 4)"
-msgstr ""
+msgstr "Punto utente ora 1 (tasto 4)"
 
 msgid "user point in time 2 (Key 5)"
-msgstr ""
+msgstr "Punto utente ora 2 (tasto 5)"
 
 msgid "user point in time 3 (Key 6)"
-msgstr ""
+msgstr "Punto utente ora 3 (tasto 6)"
 
 msgid "jump to next day point if ago"
-msgstr ""
+msgstr "Vai al giorno succ. se scaduto"
 
 msgid "Show search item itself"
-msgstr ""
+msgstr "Mostra termini di ricerca"
 
 msgid "Press 1 for help"
-msgstr ""
+msgstr "Premi 1 per Aiuto"
 
 #, c-format
 msgid "%d-%m"
-msgstr ""
+msgstr "%d-%m"
 
 msgid "o'clock"
-msgstr ""
+msgstr "in punto"
 
 msgid "Timer conflict!"
-msgstr ""
+msgstr "Timer in conflitto!"
 
 msgid "NORMAL MODE:"
-msgstr ""
+msgstr "MODALITA' NORMALE:"
 
 msgid ""
 "arrows\n"
 "\tmove view"
 msgstr ""
+"Frecce\n"
+"\tSposta visualizzazione"
 
 msgid ""
 "back\n"
 "\tclose TV OnScreen"
 msgstr ""
+"Indietro\n"
+"\tChiudi TV OnScreen"
 
 msgid ""
 "red/blue\n"
 "\t-/+ one day"
 msgstr ""
+"Rosso/Blu\n"
+"\t-/+ un giorno"
 
 msgid ""
 "green/yellow\n"
 "\tone page left/right"
 msgstr ""
+"Verde/Giallo\n"
+"\tUna pagina sinistra/destra"
 
 msgid ""
 "7/9\n"
 "\tone page left/right"
 msgstr ""
+"7/9\n"
+"\tUna pagina sinistra/destra"
 
 msgid ""
 "8\n"
 "\tgoto current channel"
 msgstr ""
+"8\n"
+"\tVai al canale attuale"
 
 msgid ""
 "0\n"
 "\tgoto now"
 msgstr ""
+"0\n"
+"\tVai adesso"
 
 msgid ""
 "4/5/6\n"
 "\tgoto configured time"
 msgstr ""
+"4/5/6\n"
+"\tVai all'ora configurata"
 
 msgid ""
 "ok\n"
 "\tswitch to edit mode\n"
 msgstr ""
+"OK\n"
+"\tPassa in modalità modifica\n"
 
 msgid "EDIT MODE:"
-msgstr ""
+msgstr "MODALITA' MODIFICA:"
 
 msgid ""
 "back\n"
 "\tback to normal mode"
 msgstr ""
+"Indietro\n"
+"\tTorna alla modalità normale"
 
 msgid ""
 "arrows\n"
 "\tmove selected schedule"
 msgstr ""
+"Frecce\n"
+"\tSposta programma selezionato"
 
 msgid ""
 "record\n"
 "\tcreate timer"
 msgstr ""
+"Registra\n"
+"\tCrea timer"
 
 msgid ""
 "ok\n"
 "\tshow details"
 msgstr ""
+"OK\n"
+"\tMostra dettagli"
 
 msgid "Added AutoTimer to vdradmin."
-msgstr ""
+msgstr "Aggiunto timer automatico a VDRAdmin"
 
 msgid "Startoption 'vdradminfile' not set!"
-msgstr ""
+msgstr "Opzione avvio file 'vdradmin' non impostata!"
 
 msgid "Search"
-msgstr ""
+msgstr "Cerca"
 
 msgid "Search for"
-msgstr ""
+msgstr "Ricerca di"
 
 msgid "Searching..."
-msgstr ""
+msgstr "Ricerca..."
 
 msgid "Record"
-msgstr ""
+msgstr "Registra"
 
 msgid "Details"
-msgstr ""
+msgstr "Dettagli"
 
 msgid "in all"
-msgstr ""
+msgstr "in tutto"
 
 msgid "Back"
-msgstr ""
+msgstr "Indietro"
 
 msgid "Nothing found!"
-msgstr ""
+msgstr "Trovato niente!"
 
 msgid "AutoTimer"
-msgstr ""
+msgstr "Timer automatico"
 
 msgid "Shows the EPG info in form of a typical TV magazine"
-msgstr ""
+msgstr "Mostra informazioni EPG in forma di un tipico magazine TV"
 
 msgid "TV-OnScreen"
-msgstr ""
+msgstr "TV OnScreen"
+
