--- a/po/de_DE.po
+++ b/po/de_DE.po
@@ -7,13 +7,19 @@ msgid ""
 msgstr ""
 "Project-Id-Version: VDR 1.6.0\n"
 "Report-Msgid-Bugs-To: <see README>\n"
-"POT-Creation-Date: 2010-08-02 15:03+0200\n"
+"POT-Creation-Date: 2010-11-09 20:45+0100\n"
 "PO-Revision-Date: 2008-12-22 18:10+0000\n"
 "Last-Translator: Klaus Schmidinger <kls@cadsoft.de>\n"
 "Language-Team: <vdr@linuxtv.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=ISO-8859-15\n"
 "Content-Transfer-Encoding: 8bit\n"
+
+msgid "font size"
+msgstr "Zeichensatzgröße"
+
+msgid "transparency"
+msgstr "Transparenz"
 
 msgid "show channel logos"
 msgstr "zeige Kanal-Logos"
