--- a/po/de_DE.po
+++ b/po/de_DE.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: VDR 1.6.0\n"
 "Report-Msgid-Bugs-To: <see README>\n"
-"POT-Creation-Date: 2010-11-15 18:35+0100\n"
+"POT-Creation-Date: 2010-11-17 19:24+0100\n"
 "PO-Revision-Date: 2008-12-22 18:10+0000\n"
 "Last-Translator: Klaus Schmidinger <kls@cadsoft.de>\n"
 "Language-Team: <vdr@linuxtv.org>\n"
@@ -20,6 +20,12 @@ msgstr "Zeichensatzgröße"
 
 msgid "transparency"
 msgstr "Transparenz"
+
+msgid "replace original schedule"
+msgstr "ersetze Menüpunkt Programm"
+
+msgid "show only minutes"
+msgstr "zeige nur Minuten"
 
 msgid "show channel logos"
 msgstr "zeige Kanal-Logos"
@@ -45,7 +51,7 @@ msgstr "Anwenderzeitpunkt 3 (Taste 6)"
 msgid "jump to next day point if ago"
 msgstr "Gehe zum nächsten Tag wenn vorbei"
 
-msgid "Show search item itself"
+msgid "show search item itself"
 msgstr "Zeige auch Suchbegriff"
 
 msgid "Press 1 for help"
@@ -57,9 +63,6 @@ msgstr "%d.%m."
 
 msgid "o'clock"
 msgstr "Uhr"
-
-msgid "Timer conflict!"
-msgstr "Timer Konflikt!"
 
 msgid "NORMAL MODE:"
 msgstr "NORMALER MODUS:"
@@ -197,3 +200,5 @@ msgstr "Zeigt EPG als TV-Magazin"
 msgid "TV-OnScreen"
 msgstr "TV Magazin"
 
+#~ msgid "Timer conflict!"
+#~ msgstr "Timer Konflikt!"
